--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import "./variables";
 @import './node_modules/bootstrap/scss/bootstrap';
+@import "./components/header";
 
 
 *, *::after, *::before {
@@ -10,4 +11,12 @@
 }
 
 
-body {}
+button{
+  cursor: pointer;
+  outline: none;
+}
+
+
+h1 {
+  color: $main;
+}
