--- a/app/src/scss/components/_header.scss
+++ b/app/src/scss/components/_header.scss
@@ -2,8 +2,99 @@ header {
     background-color: $main;
 }
 
-.nav-link {
+
+.header__logo {
+    width: 252px;
+    padding-right: 40px;
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.header__link {
     font-size: 16px;
     line-height: 16px;
     color: $black;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+    text-decoration: none;
+
+    &:hover {
+        color: $black;
+    }
+}
+
+.authorization {
+    display: flex;
+
+    &__info {
+        display: flex;
+        align-items: center;
+
+        & span {
+            margin: 0 3px 0 3px;
+        }
+    }
+
+    &__login {
+        display: flex;
+
+        & button {
+            font-size: 16px;
+            line-height: 16px;
+            color: $black;
+            border: none;
+            background: transparent;
+        }
+    }
+
+    &__register {
+        margin-right: 20px;
+        & button {
+            font-size: 16px;
+            line-height: 16px;
+            color: $black;
+            border: none;
+            background: transparent;
+        }
+    }
+
+    &__basket {
+        display: flex;
+        align-items: center;
+        padding: 10px 20px 10px 17px;
+        border: none;
+
+        &_img {
+            width: 20px;
+            margin-right: 23px;
+
+            & img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        &_text {
+            font-size: 16px;
+            line-height: 16px;
+            margin: 0;
+            color: $black;
+        }
+    }
+
+    &__login_img {
+        width: 18px;
+        margin-right: 15px;
+
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
