--- a/app/src/scss/components/home/_lider.scss
+++ b/app/src/scss/components/home/_lider.scss
@@ -63,5 +63,33 @@
             border: none;
         }
     }
+    
+    &__left {
+        background-color: $white;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 109px;
+        left: 40px;
+    }
+    
+    &__right {
+        background-color: $white;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 109px;
+        right: 39px;
+    }
 }
 
