--- a/app/src/scss/components/home/_lider.scss
+++ b/app/src/scss/components/home/_lider.scss
@@ -20,6 +20,21 @@
         max-width: 268px;
         max-height: 268px;
 
+        & > .not_available{
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,.7);
+            & p{
+                color: #fff;
+                text-align: center;
+                line-height: 10;
+                font-size: 24px;
+                font-weight: bold;
+            }
+        }
+
         img {
             width: 100%;
             height: 100%;
