--- a/app/src/scss/components/home/_lider.scss
+++ b/app/src/scss/components/home/_lider.scss
@@ -73,9 +73,10 @@
             line-height: 14px;
             font-weight: 700;
             color: $black;
-            padding: 13px 26px;
+            padding: 10px 20px;
             background: $main;
             border: none;
+            border-radius: 5px;
         }
     }
     
