--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "./components/home/banner";
 @import "./components/home/category";
 @import "./components/home/lider";
+@import "./components/home/advantage";
 
 
 *, *::after, *::before {
