--- a/app/src/scss/components/home/_banner.scss
+++ b/app/src/scss/components/home/_banner.scss
@@ -2,19 +2,16 @@
     margin-top: 30px;
 
     &__block {
-
+        margin-right: 30px;
         &_img {
-            max-width: 1046px;
-            width: 100%;
-
             & img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
             }
         }
-
-        &_left {
+        
+        & button{
             position: absolute;
             background-color: $white;
             width: 50px;
@@ -25,23 +22,35 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            top: 170px;
+            z-index: 3;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        &_left {
             left: 10px;
         }
 
         &_right {
-            position: absolute;
+            right: 39px;
+        }
+    }
+    
+    &__product {
+        
+        & .slick-controls {
             background-color: $white;
-            width: 50px;
-            height: 50px;
+            width: 36px;
+            height: 36px;
             border-radius: 50%;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
             border: none;
             display: flex;
             justify-content: center;
             align-items: center;
-            top: 170px;
-            right: 39px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 3;
         }
     }
 
@@ -49,6 +58,7 @@
         &_img {
             width: 238px;
             padding-top: 20px;
+            margin: auto;
 
             & img {
                 width: 100%;
@@ -69,8 +79,8 @@
         }
 
         &_sp {
-            right: 0px;
-            top: -5px;
+            right: 50px;
+            top: 0px;
             width: 85px;
             height: 85px;
             border-radius: 50%;
@@ -79,33 +89,14 @@
             line-height: 24px;
             text-align: center;
         }
+        
 
         &_left {
-            background-color: $white;
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-            border: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             left: -18px;
-            bottom: 47px;
         }
 
         &_right {
-            background-color: $white;
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-            border: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             right: 3px;
-            bottom: 47px;
         }
     }
 
