--- a/app/src/scss/components/home/_lider.scss
+++ b/app/src/scss/components/home/_lider.scss
@@ -1,9 +1,6 @@
 .lider {
     margin: 50px 10px 70px 10px;
     
-    &__info {
-        max-width: 268px;
-    }
 
     &__title {
         font-size: 28px;
@@ -12,13 +9,11 @@
         color: $black;
         padding: 10px 20px;
         background: $main;
-        margin-left: 40px;
+        margin-left: 50px;
         margin-bottom: 20px;
     }
 
     &__img {
-        max-width: 268px;
-        max-height: 268px;
 
         & > .not_available{
             left: 0;
@@ -80,7 +75,7 @@
         }
     }
     
-    &__left {
+    &__btn_sl {
         background-color: $white;
         width: 50px;
         height: 50px;
@@ -90,21 +85,15 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        top: 109px;
+        top: 31%;
+        z-index: 3;
+    }
+    
+    &__left {
         left: 40px;
     }
     
     &__right {
-        background-color: $white;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-        border: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        top: 109px;
         right: 39px;
     }
 }
