--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./components/home/category";
 @import "./components/home/lider";
 @import "./components/home/advantage";
+@import "./components/main-components/footer";
 
 
 *, *::after, *::before {
