--- a/app/src/scss/components/home/_advantage.scss
+++ b/app/src/scss/components/home/_advantage.scss
@@ -1,7 +1,6 @@
 .advantage {
     margin-bottom: 100px;
     &__title {
-        font-size: 28px;
         line-height: 28px;
         font-weight: 700;
         color: $black;
@@ -15,35 +14,108 @@
         &_img {
             width: 140px;
             height: 140px;
+            padding: 20px;
             background: $grey;
             border-radius: 50%;
         }
 
         &_desc {
-            max-width: 255px;
-            width: 100%;
             background: $main;
             margin-left: 20px;
         }
     }
 
     &__img {
-        width: 80px;
 
         img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
         }
     }
 
     &__text {
         font-size: 20px;
-        line-height: 30px;
         font-weight: 700;
         color: $black;
-        width: 92px;
         margin-bottom: 0;
         padding: 5px 0 5px 15px;
+    }
+}
+
+
+
+/*----------Media queries-------------*/
+@media screen and (max-width: 1380px){
+    .advantage {
+
+
+        &__block {
+
+            &_img {
+                width: 100px;
+                height: 100px;
+            }
+
+        }
+
+
+    }
+}
+
+
+@media screen and (max-width: 1315px){
+    .advantage {
+
+
+        &__block {
+
+            &_img {
+                width: 80px;
+                height: 80px;
+            }
+
+
+        }
+
+        &__text {
+            font-size: 18px;
+        }
+
+
+    }
+}
+
+
+
+@media screen and (max-width: 992px){
+    .advantage {
+
+        &__block {
+
+            &_img {
+                width: 120px;
+                height: 120px;
+                margin-right: 20px;
+            }
+
+        }
+
+        &__text{
+            font-size: 20px;
+        }
+
+    }
+}
+
+
+
+@media screen and (max-width: 380px){
+    .advantage {
+
+        &__text{
+            font-size: 18px;
+        }
+
     }
 }
