--- a/app/src/scss/components/home/_lider.scss
+++ b/app/src/scss/components/home/_lider.scss
@@ -3,13 +3,10 @@
     
 
     &__title {
-        font-size: 28px;
-        line-height: 28px;
         font-weight: 700;
         color: $black;
         padding: 10px 20px;
         background: $main;
-        margin-left: 50px;
         margin-bottom: 20px;
     }
 
@@ -24,7 +21,6 @@
             & p{
                 color: #fff;
                 text-align: center;
-                line-height: 10;
                 font-size: 24px;
                 font-weight: bold;
             }
@@ -90,11 +86,109 @@
     }
     
     &__left {
-        left: 40px;
+        left: -10px;
     }
     
     &__right {
-        right: 39px;
+        right: -10px;
+    }
+}
+
+
+/*--------Media Queries-----------*/
+@media screen and (max-width: 1200px){
+    .lider{
+        &__item {
+            padding: 20px 10px 0 10px;
+
+            &_title, &_price {
+                font-size: 14px;
+            }
+            &_btn{
+                padding: 10px 10px;
+            }
+        }
+
+        &__img{
+            & .not_available{
+                & p{
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 992px){
+    .lider{
+        &__item {
+            padding: 20px 10px 0 10px;
+
+            &_title, &_price {
+                font-size: 18px;
+            }
+            &_btn{
+                padding: 15px 20px;
+                font-size: 18px;
+            }
+        }
+
+        &__info{
+            margin-bottom: 15px;
+        }
+
+        &__img{
+            & .not_available{
+                & p{
+                    font-size: 24px;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 600px){
+    .lider{
+        &__item {
+
+            &_title, &_price {
+                font-size: 14px;
+            }
+            &_btn{
+                padding: 10px 20px;
+            }
+        }
+
+        &__img{
+            & .not_available{
+                & p{
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 400px){
+    .lider{
+        &__item {
+
+            &_title {
+                font-size: 12px;
+            }
+            &_btn{
+                font-size: 14px;
+            }
+        }
+
+        &__img{
+            & .not_available{
+                & p{
+                    font-size: 16px;
+                }
+            }
+        }
     }
 }
 
