--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -74,3 +74,11 @@ h1 {
   font-style: normal;
 }
 
+/*------Media Queries--------*/
+
+@media screen and (max-width: 992px){
+  .container-fluid{
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+}
