--- a/app/src/scss/components/main-components/_header.scss
+++ b/app/src/scss/components/main-components/_header.scss
@@ -137,6 +137,52 @@ header {
 
 /* ================MENU MEDIA ADAPTATION================ */
 
+@media (max-width: 1325px){
+    .authorization {
+        
+        &__basket {
+            padding: 7px 15px;
+        }
+    }
+    
+    .header__link {
+        padding-right: 0 !important;
+    }
+    
+    .header__logo {
+        width: 225px;
+    }
+    
+    .navbar-nav {
+        margin-right: 0 !important;
+    }
+}
+
+@media (max-width: 1200px){
+    .authorization {
+        
+        &__basket {
+            &_text{
+                font-size: 14px;
+            }
+        }
+        &__info{
+            & button{
+                font-size: 14px;
+            }
+        }
+    }
+    
+    .header__link {
+        font-size: 14px;
+    }
+    
+    .header__logo {
+        width: 150px;
+    }
+    
+}
+
 @media (max-width: 992px) {
     .authorization {
         
@@ -162,7 +208,13 @@ header {
     }
 
     .header__link {
+        font-size: 16px;
         padding-left: 0!important;
+    }
+    
+    
+    .header__logo {
+        width: 225px;
     }
     
 
