--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./components/home/lider";
 @import "./components/home/advantage";
 @import "./components/main-components/footer";
+@import "./components/home/product";
 
 
 *, *::after, *::before {
