--- a/app/src/scss/components/product/_product.scss
+++ b/app/src/scss/components/product/_product.scss
@@ -58,12 +58,16 @@
 
         &_stars {
             margin-right: 10px;
-            & img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                margin-bottom: 4px;
+            & > div{
+                margin-right: 5px;
+                & svg {
+                    vertical-align: baseline;
+                    width: 100%;
+                    height: 100%;
+                    fill: $main
+                }
             }
+
         }
     }
     
