--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "./components/home/advantage";
 @import "./components/main-components/footer";
 @import "components/product/product";
+@import "./components/review/review";
 
 
 *, *::after, *::before {
