--- a/app/src/scss/components/review/_review.scss
+++ b/app/src/scss/components/review/_review.scss
@@ -72,13 +72,14 @@
     }
 
     &__box {
-
+        margin-bottom: 20px;
         & span {
-            font-size: 18px;
-            line-height: 18px;
-            font-weight: 400;
-            color: $black-grey;
-            margin-right: 15px;
+            font-size: 18px !important;
+            line-height: 18px !important;
+            font-weight: 400 !important;
+            color: $black-grey !important;
+            margin-right: 15px !important;
+            font-style: normal !important;
         }
     }
 
@@ -99,6 +100,67 @@
             font-weight: 400;
             font-style: italic;
             color: $black;
+        }
+    }
+}
+
+
+/* ==============MEDIA (REVIEW)================== */
+
+@media (max-width: 992px) {
+    .review {
+
+        &__name {
+            flex-direction: column;
+            align-items: baseline !important;
+
+            & p {
+                font-style: normal !important;
+                margin-bottom: 10px !important;
+            }
+        }
+
+        &__item {
+            flex-direction: column;
+            align-items: baseline !important;
+        }
+
+        &__info {
+            padding-top: 25px;
+        }
+
+        &__rating_block {
+
+            & p {
+                font-size: 24px;
+                line-height: 24px;
+            }
+
+            & span {
+                font-size: 24px;
+                line-height: 28px;
+            }
+        }
+    }
+}
+
+@media (max-width: 376px) {
+    .review {
+        
+        &__form {
+            width: 100%;
+            
+            & button {
+                width: 100%;
+            }
+        }
+        
+        &__rating {
+            width: 100%;
+            
+            &_block {
+                justify-content: space-between;
+            }
         }
     }
 }
