--- a/app/src/scss/components/product/_product.scss
+++ b/app/src/scss/components/product/_product.scss
@@ -64,10 +64,7 @@
         padding-top: 30px;
     }
 
-    &__item {
-        max-width: 555px;
-        width: 100%;
-    }
+
 
     &__top {
         border-bottom: 1px solid $black-grey;
@@ -77,6 +74,7 @@
     &__link {
         line-height: 18px;
         font-weight: 700;
+        padding: 15px 0px;
         font-size: 18px;
         color: $black;
         margin-bottom: 20px;
@@ -147,8 +145,6 @@
     }
 
     &__main_img {
-        max-width: 581px;
-        width: 100%;
 
         img {
             width: 100%;
@@ -158,11 +154,19 @@
     }
 
     &__image {
+        height: 450px;
 
+        & .item-image{
+            height: 400px;
+            & img{
+                object-fit: contain;
+            }
+        }
         & button {
             border: none;
             background: transparent;
             top: 50%;
+            z-index: 3;
             transform: translateY(-50%);
 
             &:last-child {
@@ -183,11 +187,28 @@
         }
     }
 
+    .slick-dots{
+        display: flex;
+        justify-content: center;
+        & li{
+            list-style: none;
+            width: 10px;
+            height: 10px;
+            margin: 5px;
+            border-radius: 50%;
+            background-color: #C4C4C4;
+            & button{
+                opacity: 0;
+            }
+            &.slick-active{
+                background: $main;
+            }
+        }
+    }
+
     /*  -------------PRODUCT DESC------------------ */
 
     &__desc {
-        max-width: 555px;
-        width: 100%;
 
         & h5 {
             font-size: 24px;
@@ -256,11 +277,12 @@
     &__dropdown {
         background: $milk;
         border-radius: 5px;
-        max-height: 273px;
-        height: 100%;
-        max-width: 280px;
         width: 100%;
         padding: 15px;
+
+        .dropdown-menu{
+            width: 100%;
+        }
 
         &_sp {
             font-size: 18px;
@@ -337,5 +359,12 @@
 @media (max-width: 992px) {
     .search-product {
         display: none !important;
+    }
+
+    .product{
+
+        &__top{
+            border: none;
+        }
     }
 }
