--- a/app/src/scss/components/main-components/_header.scss
+++ b/app/src/scss/components/main-components/_header.scss
@@ -135,88 +135,140 @@ header {
     margin-right: 15px;
 }
 
+
+/* АВТОРИЗОВАННЫЙ ПОЛЬЗОВАТЕЛЬ */
+
+.authorized-user {
+
+    &__button {
+        border: none;
+        background: $white;
+        border-radius: 50%;
+        padding: 13px 16px;
+        margin-right: 20px;
+
+        & img {
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    &__info {
+        border: none;
+        background: $white;
+        padding: 10px 20px 10px 17px;
+        width: 144px;
+        border-radius: 5px;
+
+        & span {
+            font-size: 8px;
+            line-height: 8px;
+            font-weight: 700;
+            color: $black;
+            width: 11px;
+            height: 11px;
+            background: $main;
+            border-radius: 50%;
+            right: -4px;
+            top: 2px;
+        }
+
+        & p {
+            margin-bottom: 0;
+            font-size: 16px;
+            line-height: 16px;
+            font-weight: 400;
+            color: $black;
+        }
+    }
+}
+
+
+
 /* ================MENU MEDIA ADAPTATION================ */
 
-@media (max-width: 1325px){
+@media (max-width: 1325px) {
     .authorization {
-        
+
         &__basket {
             padding: 7px 15px;
         }
     }
-    
+
     .header__link {
         padding-right: 0 !important;
     }
-    
+
     .header__logo {
         width: 225px;
     }
-    
+
     .navbar-nav {
         margin-right: 0 !important;
     }
 }
 
-@media (max-width: 1200px){
+@media (max-width: 1200px) {
     .authorization {
-        
+
         &__basket {
-            &_text{
+            &_text {
                 font-size: 14px;
             }
         }
-        &__info{
-            & button{
+
+        &__info {
+            & button {
                 font-size: 14px;
             }
         }
     }
-    
+
     .header__link {
         font-size: 14px;
     }
-    
+
     .header__logo {
         width: 150px;
     }
-    
+
 }
 
 @media (max-width: 992px) {
     .authorization {
-        
+        display: flex !important;
+
         &__basket {
-            display: none;
+            display: none !important;
         }
-        
+
         &__register {
             display: none;
         }
-        
+
         &__sp {
             display: none;
         }
-        
+
         &__login {
             display: none;
         }
-        
+
         &__mob_basket {
             display: block;
-        } 
+        }
     }
 
     .header__link {
         font-size: 16px;
-        padding-left: 0!important;
+        padding-left: 0 !important;
     }
-    
-    
+
+
     .header__logo {
         width: 225px;
     }
-    
+
 
     .navbar__button_tog {
         display: block;
