--- a/app/src/scss/components/home/_lider.scss
+++ b/app/src/scss/components/home/_lider.scss
@@ -68,6 +68,10 @@
             background: $main;
             border: none;
             border-radius: 5px;
+            &.disable{
+                background-color: #343434!important;
+                color:#fff!important;
+            }
         }
     }
     
@@ -177,13 +181,17 @@
 @media screen and (max-width: 400px){
     .lider{
 
+        &__title{
+            font-size: 15px;
+        }
+
         &__item {
 
             &_title {
                 font-size: 12px;
             }
             &_btn{
-                font-size: 14px;
+                font-size: 12px;
             }
         }
 
