--- a/app/src/scss/components/athlete-card/athlete-card.scss
+++ b/app/src/scss/components/athlete-card/athlete-card.scss
@@ -1,16 +1,34 @@
 .product {
     &__date {
         padding: 12px;
-        border: 1px solid;
-        border-color: #D0D0D0;
+        border: 1px solid #D0D0D0;
         box-sizing: border-box;
         border-radius: 5px;
         background: #fff;
         width: 100%;
         margin: 10px 0 20px 0;
-        
+        & span{
+            right: 15px;
+            cursor: pointer;
+        }
+
+        input[type="date"]::-webkit-calendar-picker-indicator {
+            position: relative;
+            z-index: 3;
+            opacity: 0;
+            cursor: pointer;
+        }
+
+        input[type="time"]::-webkit-calendar-picker-indicator {
+            position: relative;
+            z-index: 3;
+            opacity: 0;
+            cursor: pointer;
+        }
+
         & input {
             border: none;
+            outline: none;
             background: transparent;
             width: 100%;
         }
