--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import "./components/review/review";
 @import "./components/athlete-card/athlete-card.scss";
 @import "./components/catalog/catalog.scss";
+@import "./components/main-components/authentications-form";
 
 
 
