--- a/app/src/scss/components/main-components/_footer.scss
+++ b/app/src/scss/components/main-components/_footer.scss
@@ -43,6 +43,7 @@
         & a {
             font-size: 22px;
             line-height: 22px;
+            padding: 5px 0px;
             font-weight: 700;
             color: $white;
             text-decoration: none;
