--- a/app/src/scss/components/main-components/_header.scss
+++ b/app/src/scss/components/main-components/_header.scss
@@ -119,6 +119,7 @@ header {
         line-height: 8px;
         font-weight: 700;
         color: $black;
+        padding: 4px 3px;
         width: 16px;
         height: 15px;
         background: $white;
