--- a/app/src/scss/components/home/_lider.scss
+++ b/app/src/scss/components/home/_lider.scss
@@ -72,6 +72,7 @@
             &.disable{
                 background-color: #343434!important;
                 color:#fff!important;
+                padding: 8px 15px !important;
             }
 
         }
