--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -12,6 +12,9 @@
 @import "./components/athlete-card/athlete-card.scss";
 @import "./components/catalog/catalog.scss";
 @import "./components/main-components/authentications-form";
+@import "./components/basket/basket";
+@import "./components/404/404.scss";
+@import "./components/popup/popup";
 
 
 
