--- a/app/src/scss/components/main-components/_header.scss
+++ b/app/src/scss/components/main-components/_header.scss
@@ -90,7 +90,9 @@ header {
     &__login_img {
         width: 18px;
         margin-right: 15px;
-
+        background: transparent;
+        border: none;
+        outline: none;
         & img {
             width: 100%;
             height: 100%;
@@ -196,156 +198,157 @@ header {
     .authorization {
 
 
-/* ================MENU MEDIA ADAPTATION================ */
+        /* ================MENU MEDIA ADAPTATION================ */
 
-@media (max-width: 1325px){
-    .authorization {
-        
-
-        &__basket {
-            padding: 7px 15px;
-        }
-    }
+        @media (max-width: 1325px) {
+            .authorization {
 
 
-    .header__link {
-        padding-right: 0 !important;
-    }
-
-    .header__logo {
-        width: 225px;
-    }
+                &__basket {
+                    padding: 7px 15px;
+                }
+            }
 
 
-    
-    .header__link {
-        padding-right: 0 !important;
-    }
-    
-    .header__logo {
-        width: 225px;
-    }
-    
+            .header__link {
+                padding-right: 0 !important;
+            }
 
-    .navbar-nav {
-        margin-right: 0 !important;
-    }
-}
+            .header__logo {
+                width: 225px;
+            }
 
 
 
-@media (max-width: 1200px){
-    .authorization {
-        
-        &__basket {
-            &_text{
-                font-size: 14px;
+            .header__link {
+                padding-right: 0 !important;
+            }
+
+            .header__logo {
+                width: 225px;
+            }
+
+
+            .navbar-nav {
+                margin-right: 0 !important;
             }
         }
-        &__info{
-            & button{
+
+
+
+        @media (max-width: 1200px) {
+            .authorization {
+
+                &__basket {
+                    &_text {
+                        font-size: 14px;
+                    }
+                }
+
+                &__info {
+                    & button {
+                        font-size: 14px;
+                    }
+                }
+            }
+
+
+            .header__link {
                 font-size: 14px;
             }
+
+            .header__logo {
+                width: 150px;
+            }
+
+        }
+
+        @media (max-width: 992px) {
+            .authorization {
+
+
+                &__basket {
+                    display: none;
+                }
+
+                &__register {
+                    display: none;
+                }
+
+                &__sp {
+                    display: none;
+                }
+
+                &__login {
+                    display: none;
+                }
+
+                &__mob_basket {
+                    display: block;
+                }
+
+            }
+
+            .header__link {
+                font-size: 16px;
+                padding-left: 0 !important;
+            }
+
+
+            .header__logo {
+                width: 225px;
+            }
+
+
+
+            .navbar__button_tog {
+                display: block;
+            }
+
+
+            .authorized-user {
+                align-items: center !important;
+            }
+
+            .authorized-user__button {
+                width: 40px;
+                height: 40px;
+            }
+
+            .authorized-user__info {
+                padding: 7px 12px 7px 10px;
+            }
+        }
+
+        @media (max-width: 523px) {
+
+            .authorized-user {
+                align-items: center !important;
+            }
+
+            .authorized-user__button {
+                width: 35px;
+                padding: 8px;
+                height: 35px;
+            }
+
+            .authorized-user__info {
+                padding: 7px 12px 7px 10px;
+                width: 45px;
+            }
+
+            .authorized-user__info span {
+                justify-content: center !important;
+            }
+
+            .authorized-user__info p {
+                display: none !important;
+            }
+
+
         }
     }
-
-    
-    .header__link {
-        font-size: 14px;
-    }
-    
-    .header__logo {
-        width: 150px;
-    }
-
 }
-
-@media (max-width: 992px) {
-    .authorization {
-
-        
-        &__basket {
-            display: none;
-        }
-        
-        &__register {
-            display: none;
-        }
-        
-        &__sp {
-            display: none;
-        }
-        
-        &__login {
-            display: none;
-        }
-        
-        &__mob_basket {
-            display: block;
-        } 
-
-    }
-
-    .header__link {
-        font-size: 16px;
-        padding-left: 0!important;
-    }
-    
-    
-    .header__logo {
-        width: 225px;
-    }
-    
-
-
-    .navbar__button_tog {
-        display: block;
-    }
-
-
-    .authorized-user {
-        align-items: center !important;
-    }
-    
-    .authorized-user__button {
-        width: 40px;
-        height: 40px;
-    }
-    
-    .authorized-user__info {
-        padding: 7px 12px 7px 10px;
-    }
-}
-
-@media (max-width: 523px) {
-    
-    .authorized-user {
-        align-items: center !important;
-    }
-    
-    .authorized-user__button {
-        width: 35px;
-        padding: 8px;
-        height: 35px;
-    }
-    
-    .authorized-user__info {
-        padding: 7px 12px 7px 10px;
-        width: 45px;
-    }
-    
-    .authorized-user__info span {
-        justify-content: center !important;
-    }
-    
-    .authorized-user__info p {
-        display: none !important;
-    }
-    
-
-}
-
-
 
 @media (max-width: 400px) {
     .header__logo {
@@ -353,24 +356,29 @@ header {
         padding-right: 30px;
     }
 
-    .authorization{
-        &__login_img{
+    .authorization {
+        &__login_img {
             width: 15px;
         }
 
-        &__mob_img{
+        &__mob_img {
             width: 18px;
         }
     }
 
-}
+    @media (max-width: 340px) {
+        .header__logo {
+            width: 180px;
+        }
+
 
     }
+
 }
+
 
 @media (max-width: 340px) {
     .header__logo {
         width: 180px;
     }
-}
-
+}    
