--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -7,14 +7,15 @@
 @import "./components/home/lider";
 @import "./components/home/advantage";
 @import "./components/main-components/footer";
-@import "components/product/product";
+@import "./components/product/product";
 @import "./components/review/review";
-@import "./components/athlete-card/athlete-card.scss";
-@import "./components/catalog/catalog.scss";
+@import "./components/athlete-card/athlete-card";
+@import "./components/catalog/catalog";
 @import "./components/main-components/authentications-form";
 @import "./components/basket/basket";
-@import "./components/404/404.scss";
+@import "./components/404/404";
 @import "./components/popup/popup";
+@import "./components/basket-main/basket-main";
 
 
 
