--- a/app/src/scss/components/not_found/not_found.scss
+++ b/app/src/scss/components/not_found/not_found.scss
@@ -1,3 +1,5 @@
+
+
 .main__404 {
     width: 100%;
     height: 76vh;
@@ -6,7 +8,7 @@
     & h1 {
         font-weight: 900;
         font-size: 144px;
-        color: $black !important;
+        color: $black;
         margin-bottom: 45px;
         line-height: 139px
     }
