--- a/app/src/scss/components/basket-main/_basket-main.scss
+++ b/app/src/scss/components/basket-main/_basket-main.scss
@@ -18,6 +18,10 @@
         margin-bottom: 0 !important;
         margin-left: 20px;
     }
+    
+    &__block {
+        padding-right: 20px;
+    }
 
     &__info {
         padding-right: 70px;
@@ -54,26 +58,183 @@
         color: $black;
         font-weight: 400;
     }
-    
+
     &__gainer_img {
         width: 164px;
+
         & img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     }
-    
-    &__desc {
-        width: 260px;
-    }
-    
+
+
     &__minus {
         margin-right: 6px;
     }
-    
-    
+
+
     &__plus {
         margin-left: 6px;
+    }
+
+    & form {
+        margin-top: 0;
+    }
+
+    &__inputs {
+        background: $white;
+        border: 1px solid $white-grey;
+        box-sizing: border-box;
+        border-radius: 10px;
+        padding: 30px 30px 40px 30px;
+
+        & input {
+            background: #E6E6E6;
+            border-radius: 5px;
+            border: none;
+            padding: 7px 0 9px 10px;
+            outline: none;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        & label {
+            font-size: 22px;
+            line-height: 22px;
+            font-weight: 400;
+            color: $black;
+        }
+    }
+
+    &__input {
+
+        &_location {
+            margin-bottom: 30px;
+        }
+
+        &_contact {
+            margin-bottom: 30px;
+
+            & div {
+                &:first-child {
+                    margin-right: 45px;
+                }
+            }
+
+        }
+
+        &_name {
+            margin-bottom: 30px;
+
+            & div {
+                padding: 0px 15px;
+
+                &:first-child {
+                    padding-left: 0px;
+                }
+
+                &:last-child {
+                    padding-right: 0px;
+                }
+            }
+        }
+
+        &_coment {
+            & textarea {
+                height: 80px;
+                vertical-align: top;
+                resize: none;
+                background: #E6E6E6;
+                border-radius: 5px;
+                font-weight: 300;
+                font-size: 16px;
+                line-height: 16px;
+                color: $black;
+                padding: 10px;
+                outline: none;
+                border: none;
+                margin-top: 10px;
+            }
+        }
+
+        &_desc {
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 16px;
+            color: $black;
+            margin-top: 10px;
+        }
+    }
+
+    &__order {
+        background: #F8F7F7;
+        border-radius: 5px;
+        padding: 30px 20px 40px 20px;
+
+        &_total {
+            margin-bottom: 10px;
+
+            & p {
+                font-size: 24px;
+                line-height: 24px;
+                font-weight: 700;
+                color: $black;
+            }
+        }
+
+        &_sale {
+            margin-bottom: 10px;
+
+            & p {
+                font-size: 18px;
+                line-height: 18px;
+                font-weight: 400;
+                color: $black;
+            }
+        }
+
+        &_weight {
+            margin-bottom: 15px;
+
+            & p {
+                font-size: 18px;
+                line-height: 18px;
+                font-weight: 700;
+                color: $black;
+            }
+        }
+
+        &_set {
+            margin-bottom: 20px;
+
+            & label {
+                font-weight: 300;
+                font-size: 18px;
+                line-height: 18px;
+                color: $black;
+                margin-bottom: 10px;
+            }
+
+            & input {
+                border: 1px solid #D0D0D0;
+                box-sizing: border-box;
+                border-radius: 5px;
+                padding: 6px;
+                outline: none;
+            }
+        }
+
+        & button {
+            background: $main;
+            border-radius: 5px;
+            width: 100%;
+            padding: 15px 5px;
+            font-size: 14px;
+            line-height: 14px;
+            font-weight: 700;
+            color: $black;
+        }
     }
 }
