--- a/app/src/scss/components/basket-main/_basket-main.scss
+++ b/app/src/scss/components/basket-main/_basket-main.scss
@@ -1,6 +1,18 @@
 .basket-main {
     margin: 30px 0 100px 0;
 
+    .input_group{
+        padding: 0px 15px;
+        margin-bottom: 15px;
+
+        &:last-child{
+            padding-right: 0px;
+        }
+        &:first-child{
+            padding-left: 0px;
+        }
+    }
+
     &__title {
         font-weight: 700;
         color: $black;
@@ -11,7 +23,6 @@
     }
 
     &__number {
-        font-weight: 300;
         font-size: 28px;
         line-height: 28px;
         color: $black;
@@ -40,7 +51,6 @@
         width: 100% !important;
         font-size: 18px !important;
         line-height: 18px !important;
-        font-weight: 400 !important;
         color: $black !important;
         padding-left: 20px !important;
         margin-bottom: 0 !important;
@@ -90,7 +100,7 @@
         border-radius: 10px;
         padding: 30px 30px 40px 30px;
 
-        & input {
+        & input, & select {
             background: #E6E6E6;
             border-radius: 5px;
             border: none;
@@ -110,23 +120,7 @@
 
     &__input {
 
-        &_location {
-            margin-bottom: 30px;
-        }
-
-        &_contact {
-            margin-bottom: 30px;
-
-            & div {
-                &:first-child {
-                    margin-right: 45px;
-                }
-            }
-
-        }
-
         &_name {
-            margin-bottom: 30px;
 
             & div {
                 padding: 0px 15px;
