--- a/app/src/scss/components/basket-main/_basket-main.scss
+++ b/app/src/scss/components/basket-main/_basket-main.scss
@@ -2,15 +2,7 @@
     margin: 30px 0 100px 0;
 
     .input_group{
-        padding: 0px 15px;
         margin-bottom: 15px;
-
-        &:last-child{
-            padding-right: 0px;
-        }
-        &:first-child{
-            padding-left: 0px;
-        }
     }
 
     &__title {
@@ -70,12 +62,19 @@
     }
 
     &__gainer_img {
-        width: 164px;
+        height: 160px;
 
         & img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
+        }
+    }
+
+    .controls-items-count{
+        & span{
+            width: 40px;
+            text-align: center;
         }
     }
 
@@ -110,8 +109,12 @@
             margin-top: 10px;
         }
 
+        & select{
+            padding: 9px 0 9px 10px!important;
+        }
+
         & label {
-            font-size: 22px;
+            font-size: 20px;
             line-height: 22px;
             font-weight: 400;
             color: $black;
@@ -119,21 +122,6 @@
     }
 
     &__input {
-
-        &_name {
-
-            & div {
-                padding: 0px 15px;
-
-                &:first-child {
-                    padding-left: 0px;
-                }
-
-                &:last-child {
-                    padding-right: 0px;
-                }
-            }
-        }
 
         &_coment {
             & textarea {
@@ -150,6 +138,18 @@
                 outline: none;
                 border: none;
                 margin-top: 10px;
+            }
+        }
+
+        &_contact{
+            & > div {
+                padding: 0px 15px;
+            }
+            & div:first-child{
+                padding-left: 0px;
+            }
+            & div:last-child{
+                padding-right: 0px;
             }
         }
 
@@ -229,6 +229,21 @@
             line-height: 14px;
             font-weight: 700;
             color: $black;
+        }
+    }
+}
+
+
+/*-------Media Queries-----------*/
+
+@media screen and (max-width: 992px) {
+    .basket-main{
+        &__input{
+            &_contact{
+                & > div{
+                    padding: 0;
+                }
+            }
         }
     }
 }
