--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "./components/404/404";
 @import "./components/popup/popup";
 @import "./components/basket-main/basket-main";
+@import "./components/profile/profile";
 
 
 
